<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ValveData" Id="{8268322d-c081-40cd-8654-baa2f47face8}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_ValveData :
STRUCT
    eState         	: E_ValveState;        (* Current state of the valve *)
	eModuleState   	: E_ModuleState;       (* Module state: Manual or Auto *)
    bEnabled       	: BOOL;                 (* Valve enable/disable status *)
    fault			: ST_MODULE_ALARM;		
    tElapsedTime   	: TIME;                 (* Time elapsed in current state *)
    lastOpenTime   	: TIME;                 (* Last time the valve spent opening *)
    lastCloseTime  	: TIME;                 (* Last time the valve spent closing *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>